<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RadioGroup
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/notificationSet30Min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/after_30_min_notify" />

        <RadioButton
            android:id="@+id/notificationSet1Hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/after_1_hour_notify" />

        <RadioButton
            android:id="@+id/notificationSet3Hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/after_3_hour_notify" />

        <RadioButton
            android:id="@+id/notificationSet4Hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/after_4_hour_notify" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>